--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
     shm_size: 128mb
     restart: always
     environment:
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - user_database:/data/postgres
       - ./user_database:/docker-entrypoint-initdb.d
@@ -15,6 +15,7 @@ services:
     command: ["--port", "${USER_SERVICE_PORT}", "--db-config", "host=user_database user=postgres password=${POSTGRES_PASSWORD}"]
     environment:
       RUST_LOG: info
+      JWT_KEY: ${JWT_KEY}
     depends_on:
       - user_database
     ports:
