--- a/user_service/Cargo.toml
+++ b/user_service/Cargo.toml
@@ -8,12 +8,16 @@ edition = "2021"
 [dependencies]
 axum = "0.7.4"
 axum-extra = { version = "0.9.2", features = ["typed-header"] }
+bcrypt = "0.15.1"
 chrono = "0.4.35"
 clap = { version = "4.5.2", features = ["derive"] }
+const-hex = "1.11.3"
 env_logger = "0.11.3"
 jwt-simple = "0.12.9"
 log = "0.4.21"
 postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
+postgres-protocol = "0.6.6"
+retry = "2.0.0"
 serde = { version = "1.0.197", features = ["std", "derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
