--- a/user_service/Cargo.toml
+++ b/user_service/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tonic = "0.11"
+prost = "0.12"
+prost-types = "0.12"
 axum = "0.7.4"
 axum-extra = { version = "0.9.2", features = ["typed-header"] }
 bcrypt = "0.15.1"
@@ -22,3 +25,6 @@ serde = { version = "1.0.197", features = ["std", "derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-postgres = "0.7.10"
+
+[build-dependencies]
+tonic-build = "0.11"
